<resources>
    <string name="app_name">Petal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>

    <string name="error_field_required_name">用户名不能为空！</string>
    <string name="error_field_required_password">密码不能为空！</string>


    <!-- activity label-->
    <string name="pin_detail">采集详情</string>
    <string name="user_detail">用户信息</string>
    <string name="board_detail">画板信息</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索%1$s结果</string>

    <!-- drawer button -->
    <string name="care">关注</string>
    <string name="collect">采集</string>
    <string name="message">消息</string>
    <string name="friend">好友</string>

    <!-- drawer menu string -->
    <string name="drawer_home">首页</string>
    <string name="drawer_hot">热门</string>
    <string name="drawer_house">家居/家装</string>
    <string name="drawer_handiwork">手工/布艺</string>
    <string name="drawer_photography">摄影</string>
    <string name="drawer_food">美食</string>
    <string name="drawer_travel">旅游</string>
    <string name="drawer_illustration">插画/漫画</string>
    <string name="drawer_flat">平面</string>
    <string name="drawer_dress">女装</string>
    <string name="drawer_model">造型/美妆</string>
    <string name="drawer_wedding">婚礼</string>
    <string name="drawer_belle">美女</string>
    <string name="drawer_pet">宠物</string>
    <string name="drawer_children">儿童</string>
    <string name="drawer_architecture">建筑设计</string>
    <string name="drawer_movie">电影/图书</string>
    <string name="drawer_life">生活百科</string>
    <string name="drawer_art">人文艺术</string>
    <string name="drawer_man">男士/风尚</string>

    <!-- 图片格式化地址-->
    <string name="url_image_general">http://img.hb.aicdn.com/%s_fw320sf</string>
    <string name="url_image_big">http://img.hb.aicdn.com/%s_fw658</string>
    <string name="url_image_small">http://img.hb.aicdn.com/%s_sq75sf</string>

    <!--<string name="collection_info">由&lt;b>%1$s&lt;/b>采集到&lt;b>%2$s&lt;/b></string>-->
    <string name="collection_info">由%1$s采集到%2$s</string>


    <string name="user_fans_follows">%1$d 粉丝 %2$d 关注</string>

    <string name="who">由</string>
    <string name="from">从</string>
    <string name="like">喜欢</string>
    <string name="download">下载</string>
    <string name="text_to">采集到</string>

    <string name="text_repin_warning">已经被采集到画板 《%s》</string>


    <string name="dialog_title_pin">采集</string>
    <string name="dialog_pin_positive">确定采集</string>
    <string name="dialog_negative">取消</string>
    <string name="text_image_describe_null">暂无图片描述</string>

    <string name="share">分享</string>
    <string name="hint_search_key">请输入关键字</string>



</resources>
