<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_like"
            android:title="@string/like"
            android:checkable="true"
            android:icon="@drawable/drawable_animation_favorite_do"
            app:showAsAction="always"/>

    <item android:id="@+id/action_download"
          android:title="@string/download"
          android:icon="@drawable/ic_move_to_inbox_white_24dp"
          app:showAsAction="never"
            />
    <item
            android:id="@+id/action_share"
            android:title="@string/share"
            android:icon="@drawable/ic_camera_white_24dp"
            app:showAsAction="never" />

</menu>