<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="192dp"
             android:background="?attr/colorPrimary"
             android:orientation="vertical"
             android:padding="16dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom">

        <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"/>

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_picture"
                android:layout_alignStart="@id/iv_picture"
                android:text="Alex"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/tv_name">


            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_loyalty_black_36dp"
                    android:text="@string/care"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_camera_black_36dp"
                    android:text="@string/collect"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_message_black_36dp"
                    android:text="@string/message"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_people_black_36dp"
                    android:text="@string/friend"/>
        </LinearLayout>

    </RelativeLayout>



</FrameLayout>